--- a/helm-chart/templates/amf-configmap.yaml
+++ b/helm-chart/templates/amf-configmap.yaml
@@ -19,20 +19,20 @@ data:
           dev: {{ .Values.k8s.interface }}
         guami:
           - plmn_id:
-              mcc: {{ .Values.config.mcc }}
-              mnc: {{ .Values.config.mnc }}
+              mcc: {{ .Values.amf.mcc }}
+              mnc: {{ .Values.amf.mnc }}
             amf_id:
               region: 2
               set: 1
         tai:
           - plmn_id:
-              mcc: {{ .Values.config.mcc }}
-              mnc: {{ .Values.config.mnc }}
-            tac: {{ .Values.config.tac }}
+              mcc: {{ .Values.amf.mcc }}
+              mnc: {{ .Values.amf.mnc }}
+            tac: {{ .Values.amf.tac }}
         plmn_support:
         - plmn_id:
-            mcc: {{ .Values.config.mcc }}
-            mnc: {{ .Values.config.mnc }}
+            mcc: {{ .Values.amf.mcc }}
+            mnc: {{ .Values.amf.mnc }}
           s_nssai:
           - sst: 1
             sd: ffffff
