--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -6,29 +6,13 @@ open5gs:
   image:
     repository: registry.gitlab.com/infinitydon/registry/open5gs-aio
     pullPolicy: IfNotPresent
-    tag: "v2.4.5"
-
-ueransim:
-   repository: registry.gitlab.com/infinitydon/registry/ueransim
-   pullPolicy: IfNotPresent
-   tag: "v3.2.6"   
-   ue:
-     imsi: imsi-208930000000031
-     imei: "356938035643803"
-     imeiSv: "4370816125816151"
-     op: "63bfa50ee6523365ff14c1f45f88737d"
-     secKey: "0C0A34601D4F07677303652C0462535B"    
-
-k8swait:
-   repository: groundnuty/k8s-wait-for
-   pullPolicy: IfNotPresent
-   tag: "v1.4"
+    tag: "v2.2.2"
 
 webui:
   image:
     repository: registry.gitlab.com/infinitydon/registry/open5gs-webui
     pullPolicy: IfNotPresent
-    tag: "v2.4.5"
+    tag: "v2.2.2"
   ingress:
     enabled: false
     ## Ingress annotations done as key:value pairs
@@ -57,16 +41,10 @@ webui:
 
 dnn: internet  
 
-config:
-  upfIP: "10.240.233.70"    
-  amfIP: "10.240.233.72"
-  amfPort: "38412"
-  GnbIP: "10.240.233.71"  
+amf:
   mcc: 208
   mnc: 93
   tac: 7
-  sd: 1
-  sst: 1
 
 # Primary/Native kubernetes interface
 k8s:
